# ai-agent-template

./: .env.example  .gitignore  AGENTS.md  PLAN_REVIEW.md  README.md  pyproject.toml
.claude/: settings.local.json  worktree-sync.yaml
.claude/agents/: ci-fixer.md  debugger.md  plan-reviewer.md  reviewer.md  tester.md
.claude/commands/: check-ci.md  issue-sync.md  plan.md  pr-create.md  pr-merge.md  review.md  start-issue.md  tdd.md  worktree-clean.md  worktree-list.md  worktree-start.md
.claude/mcp/: README.md  config.example.json
.claude/rules/: coding-style.md  review-assignment-guide.md  security.md  testing.md  worktree-workflow.md
.claude/scripts/: gemini_daily_counter.sh
.claude/templates/: implementation-plan.md  plan-review-result.md  work-start-report.md
.github/workflows/: test.yml
docs/: agent_extension_parallel_dev_guide.md  ai_agent_development_complete_guide.md  ai_development_best_practices.md
knowledge/: index.json
knowledge/archive/: 20260120_1153aa.md  20260120_27d72a.md  20260120_4f9a2b.md  20260120_8ae9ae.md  20260120_968d62.md  20260120_a1cce2.md  20260120_a54c75.md  20260120_c13016.md  20260120_c3cb49.md  20260120_cc1bdb.md  20260121_2bee66.md  20260121_3808a9.md  20260121_4570f3.md  20260121_50f762.md  20260121_61630a.md  20260121_7245e5.md  20260121_77716c.md  20260121_82c606.md  20260121_abf93d.md  20260121_adf01b.md  20260121_af3c8d.md  20260121_ba0de6.md  20260121_c50160.md  20260121_c8f3a2.md  20260121_cf092d.md  20260121_d0e6b3.md  20260121_d2e407.md  20260121_d347a5.md  (+60 more)
scripts/: check_duplicate_urls.py  clean_duplicate_urls.py
src/: string_utils.py
tests/: test_check_ci_command.py  test_ci_analyzer_skill.py  test_ci_fixer_agent.py  test_codex_delegation_enforcement.py  test_config.py  test_context_detector.py  test_github_actions_workflow.py  test_interactive_session.py  test_issue_number_context_extraction.py  test_main.py  test_manager.py  test_path_normalizer.py  test_pr_merge_command.py  test_review_assignment.py  test_review_execution_info.py  test_search_with_gemini.py  test_session.py  test_skill_integration_auto_recording.py  test_skill_wrapper.py  test_start_issue_command.py  test_string_utils.py  test_token_estimator_extension.py  test_tool_call_auto_recording.py  test_ui.py  test_worktree_workflow.py
(+47 files in other folders)
