[project]
name = "claude-session-manager"
version = "0.1.0"
description = "Claude Code session management dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
claude-session-manager = "claude_session_manager.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
